...
    <string name="default_account_name">Budget Book</string>
    <string name="description">Description</string>
    <string name="dialog_balance_delete">Delete reconciled transactions</string>
    <string name="dialog_command_disabled_balance">No cleared transactions to be reconciled.</string>
    <string name="dialog_command_disabled_insert_transfer_1">Transfer transactions require a second account with the same currency.</string>
    <string name="dialog_command_disabled_insert_transfer_2">You have only one account of currency %1$s.</string>
    <string name="dialog_command_disabled_reset_account">No transactions to export.</string>
    <string name="dialog_command_disabled_distribution">No transactions have been mapped to categories in this account.</string>
    <string name="dialog_contrib_no">Not yet</string>
    <string name="dialog_contrib_no_usages_left">No free usages left.</string>
    <!-- Placeholder: 1 is name of the feature -->
    <string name="dialog_contrib_premium_feature">%1$s is a premium feature.</string>
    <string name="dialog_contrib_reminder_remove_limitation">Remove this limitation by purchasing <i>My Expenses Contrib Key</i>.</string>
    <string name="dialog_contrib_reminder_gain_access">You also gain unrestricted acces to the following features:</string>
...
    <!-- Cancelling a plan instance means setting a flag so that this instance will not trigger the creation of a new transaction -->
    <string name="menu_cancel_plan_instance">Cancel</string>
    <string name="menu_clone_transaction">Clone</string>
    <string name="menu_contrib">Contribute</string>
    <!-- Currently used on button for creating a new plan -->
    <string name="menu_create">Create</string>
    <string name="menu_create_account">New account</string>
    <string name="menu_create_instance_edit">Apply and edit</string>
    <string name="menu_create_instance_save">Apply and save</string>
    <string name="menu_create_main_cat">New main category</string>
    <string name="menu_create_method">New payment method</string>
    <string name="menu_create_party">New party</string>
    <string name="menu_create_split">New split</string>
...
    <string name="menu_create_template">New template</string>
    <string name="menu_create_template_from_transaction">Save as template</string>
    <string name="menu_create_template_for_transaction">New transaction template</string>
    <string name="menu_create_template_for_transfer">New transfer template</string>
    <string name="menu_create_transaction">New Transaction</string>
    <string name="menu_create_transfer">New Transfer</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_delete_account">Delete account</string>
    <string name="menu_distribution">Distribution</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_edit_account">Edit Account</string>
    <string name="menu_edit_cat">Edit category</string>
    <string name="menu_edit_method">Edit payment method</string>
    <string name="menu_edit_party">Edit party</string>
    <string name="menu_edit_plan_instance">Edit single plan occurrence</string>
    <string name="menu_edit_split">Edit split</string>
...
    <string name="menu_edit_template">Edit Template</string>
    <string name="menu_edit_transaction">Edit Transaction</string>
    <string name="menu_edit_transfer">Edit Transfer</string>
    <string name="menu_exclude_from_totals">Exclude from totals</string>
    <string name="menu_forward">Forward</string>
    <string name="menu_grouping">Grouping</string>
    <string name="menu_help">Help</string>
    <!-- This command inverts the direction of a transfer -->
    <string name="menu_invert_transfer">Invert</string>
    <string name="menu_manage_plans">Templates and plans</string>
    <string name="menu_manage_plans_tab_templates">Templates</string>
    <string name="menu_manage_plans_tab_plans">Plans</string>
    <string name="menu_open">Open</string>
...
    <string name="menu_reset_all">Export and reset all</string>
    <!-- Resetting a plan instance means deleting a transaction that has been created for this instances, or removing the cancel flag -->
    <string name="menu_reset_plan_instance">Reset</string>
    <string name="menu_save">Save</string>
    <string name="menu_save_and_new">Save and new</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Tell a friend</string>
    <string name="menu_set_sort_key">Set sort key</string>
    <string name="menu_split_transaction">Transform to split</string>
    <string name="method">Method</string>
    <string name="new_version">New version</string>
    <string name="no_accounts">No Accounts!</string>
...
    <string name="no_app_handling_email_available">No app handling email available.</string>
    <string name="no_app_handling_ftp_available">No app handling ftp available. Install <i>Send With FTP</i>?</string>
    <string name="no_app_handling_pdf_available">No app handling PDF files available.</string>
    <string name="no_categories">No categories.</string>
    <string name="no_category_assigned">No category assigned</string>
    <string name="no_details">No details.</string>
    <string name="no_expenses">No Expenses Yet!</string>
    <string name="no_exportable_expenses">There are no transactions that have not yet been exported.</string>
    <string name="no_filemanager_installed">No filemanager installed</string>
    <string name="no_mapped_transactions">No transactions have been mapped to categories during this period.</string>
    <string name="no_methods">No payment methods.</string>
    <string name="no_parties">No parties.</string>
    <string name="no_plans">No plans.</string>
...
    <string name="transfer_to_account">To</string>
    <string name="tutorial">User guide</string>
    <string name="type">Type</string>
    <string name="unsplit_amount">Unsplit amount</string>
    <string name="unsplit_amount_greater_than_zero">There is still some amount left unsplit.</string>
    <string name="warning_backup">Database and preferences will be saved to \"%1$s\". Do you want to continue?</string>
    <string name="warning_delete_account">Account \"%1$s\" will be deleted with all its transactions.</string>
    <plurals name="warning_delete_main_category">
  	<item quantity="one">One selected category has subcategories, that will be deleted as well.</item>
  	<item quantity="other">%1$d selected categories have subcategories, that will be deleted as well.</item>
  </plurals>
    <plurals name="warning_delete_plan">
    <item quantity="one">The selected plan will be deleted.</item>
...
