...
 -->
<resources>
    <item name="BACKUP_COMMAND" type="id" />
    <item name="CONTRIB_INFO_COMMAND" type="id" />
    <item name="CONTRIB_INFO_DIALOG" type="id" />
    <item name="CONTRIB_BUY_COMMAND" type="id" />
    <item name="CREATE_COMMAND" type="id" />
    <item name="CREATE_PART_COMMAND" type="id" />
    <item name="CREATE_SUB_COMMAND" type="id" />
    <item name="CREATE_ACCOUNT_COMMAND" type="id" />
    <item name="CREATE_ACCOUNT_FOR_TRANSFER_COMMAND" type="id" />
    <item name="CREATE_TEMPLATE_COMMAND" type="id" />
    <item name="DELETE_COMMAND" type="id" />
    <item name="DELETE_COMMAND_DO" type="id" />
    <item name="DISTRIBUTION_COMMAND" type="id" />
    <item name="EDIT_PLAN_INSTANCE_COMMAND" type="id" />
    <item name="EDIT_COMMAND" type="id" />
    <item name="FEEDBACK_COMMAND" type="id" />
    <item name="GROUPING_COMMAND" type="id" />
    <item name="HANDLE_RESTORE_ON_INSTALL_COMMAND" type="id" />
    <item name="HELP_COMMAND" type="id" />
    <item name="INVERT_COMMAND" type="id" />
    <item name="MANAGE_TEMPLATES_COMMAND" type="id" />
    <item name="MORE_ACTIONS_DIALOG" type="id" />
    <item name="MORE_INFO_DIALOG" type="id" />
    <item name="NO_COMMAND" type="id" />
    <item name="PASSWORD_WARNING_DIALOG" type="id" />
    <item name="RATE_COMMAND" type="id" />
    <item name="RESET_COMMAND" type="id" />
    <item name="RESTORE_COMMAND" type="id" />
    <item name="SAVE_AND_NEW_COMMAND" type="id" />
    <item name="SELECT_ACCOUNT_DIALOG" type="id" />
    <item name="SETTINGS_COMMAND" type="id" />
    <item name="TEMPLATE_TITLE_DIALOG" type="id" />
    <item name="WEB_COMMAND" type="id" />
...
    <item name="FILTER_COMMENT_COMMAND" type="id" />
    <item name="FILTER_STATUS_COMMAND" type="id" />
    <item name="FILTER_PAYEE_COMMAND" type="id" />
    <item name="FILTER_METHOD_COMMAND" type="id" />
    <item name="FILTER_DATE_COMMAND" type="id" />
    <item name="FILTER_TAG_COMMAND" type="id" />
    <item name="PRINT_COMMAND" type="id" />
    <item name="OPEN_PDF_COMMAND" type="id" />
    <item name="AUTO_FILL_COMMAND" type="id" />
    <item name="EXCLUDE_FROM_TOTALS_COMMAND" type="id" />
    <item name="QUIT_COMMAND" type="id" />
    <item name="SPLIT_TRANSACTION_COMMAND" type="id" />
    <item name="TOGGLE_CHART_COMMAND" type="id" />
...
